syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "GadgetBornType.proto";

message CreateGadgetInfo {
	GadgetBornType born_type = 1;
	Chest chest = 2;

	message Chest {
		uint32 chest_drop_id = 1;
		bool is_show_cutscene = 2;
	}
}
